[PROD-2775] Fix more options modal z-index issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -5666,11 +5666,15 @@ body.buddyboss-theme {
 		margin-right: 0;
 	}
 
-	div:has(> .bb_more_dropdown.open) > [data-balloon] {
+	div:has(> .bb_more_dropdown.open) {
 
-		&:before,
-		&:after {
-			display: none;
+		> [data-bp-tooltip],
+		> [data-balloon] {
+
+			&:before,
+			&:after {
+				display: none;
+			}
 		}
 	}
 }
